force-app/main/default/objects/Snowflake_Creds__mdt/Snowflake_Creds__mdt.object-meta.xml
<CustomObject>
    <label>Snowflake Creds</label>
    <pluralLabel>Snowflake Creds</pluralLabel>
</CustomObject>