force-app/main/default/objects/Snowflake_Creds__mdt/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <type>TextArea</type>
</CustomField>