force-app/main/default/objects/Snowflake_Creds__mdt/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <type>TextArea</type>
</CustomField>