force-app/main/default/objects/Snowflake_Creds__mdt/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <type>TextArea</type>
</CustomField>